agregado proyecto cronometro

--- a/index.html
+++ b/index.html
@@ -181,14 +181,6 @@
 
             </article>
 
-            <article class="main__card">
-
-                <h3>Vite.js</h3>
-
-                <img src="public/img/icons/vitejs.png" alt="Vite.js">
-
-            </article>
-
         </section>
 
         <!-- Projects -->
@@ -216,8 +208,6 @@
                         </div>
                     </div>
                 </article>
-
-            
 
                 <article class="main__project_item">
                     <div class="project__card">
@@ -343,6 +333,25 @@
                             <h5>Tres en Raya App</h5>
                             <p>Juego de tres en raya que desarrollé para aprender sobre el manejo de estados en ReactJS además de otros conceptos básicos de React, y también la utilicé para reforzar mis conocimientos en animaciones con CSS3.</p>
                             <a href="https://tictactoe-app-if.netlify.app" target="_blank">Ver enlace<i class="material-icons">open_in_new</i></a>
+                        </div>
+                    </div>
+                </article>
+            </div>
+
+            <div>
+                <article class="main__project_item">
+                    <div class="project__card">
+                        <div class="project__face project__card--front"></div>
+                            <img src="public/img/projects/chronometer-app.png" alt="Chronometer App">
+
+                            <span>HTML5, CSS3, JS</span>
+                            <h4>Cronometro</h4>
+
+                        </div>
+                        <div class="project__face project__card--back">
+                            <h5>Cronometro</h5>
+                            <p>Cronómetro desarrollado en JavaScript Vanilla para aprender el uso de intervalos con setInterval() y clearInterval() y control de animaciones por medio de JavaScript.</p>
+                            <a href="https://chronometer-app-if.netlify.app" target="_blank">Ver enlace<i class="material-icons">open_in_new</i></a>
                         </div>
                     </div>
                 </article>
